# esp32s3-smart-display

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  app_actions.c  app_actions.h  app_config.h  baterry.c  battery.h  ble_prov.c  ble_prov.h  buzzer.c  buzzer.h  env_sensor_drv.c  env_sensor_drv.h  font_cn_16x16.c  font_cn_16x16.h  graphics.c  graphics.h  idf_component.yml  main.c  mqtt_api.c  mqtt_api.h  openwrt_api.c  openwrt_api.h  stock_api.c  stock_api.h  syslog_redirect.c  syslog_redirect.h  system_utils.c  system_utils.h  web_server.c  web_server.h
main/html/: index.html
main/html/css/: style.css
scripts/: gen_font_cn_16x16.py  mqtt_push_image.py
